[package]
name = "xxh32"
version = "0.1.0"
authors = ["Johannes Krampf <johannes.krampf@googlemail.com>"]
license = "MPL-2.0"
description = "Rust implementation of the xxh32 hash used in the LZ4 compression format."
repository = "https://github.com/johkra/xxh32"

[dependencies]
byteorder = "0.3.13"
