[package]
name = "xxh32"
version = "0.2.1"
authors = ["Johannes Krampf <johannes.krampf@googlemail.com>"]
license = "MPL-2.0"
edition="2018"
description = "Rust implementation of the xxh32 hash used in the LZ4 compression format."
repository = "https://github.com/johkra/xxh32"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "lib"
harness = false
